# module-xml

./: .gitignore  CMakeLists.txt  ChangeLog  Makefile.am  README  README-BINARIES  RELEASE-NOTES  configure.ac  qore-xml-module.spec  reconf.sh
docs/: doxyfile.tmpl  doxygen-api-filter.q  mainpage.doxygen  mainpage.doxygen.tmpl
examples/: MultiPartMessage.qc  SoapClient.qc  SoapHandler.qc  WSDL.qc  XmlRpcHandler.qc  XmlRpcServerValidation.q  wsdl-tools.q  xml-rpc-client.q
qlib/: SalesforceSoapClient.qm  SoapClient.qm  SoapHandler.qm  WSDL.qm  XmlRpcConnection.qm  XmlRpcHandler.qm
src/: MakeXmlOpts.cpp  MakeXmlOpts.h  MakeXmlOpts.qpp  Makefile.am  QC_FileSaxIterator.qpp  QC_InputStreamSaxIterator.qpp  QC_SaxIterator.h  QC_SaxIterator.qpp  QC_XmlDoc.cpp  QC_XmlDoc.h  QC_XmlDoc.qpp  QC_XmlNode.cpp  QC_XmlNode.h  QC_XmlNode.qpp  QC_XmlReader.cpp  QC_XmlReader.h  QC_XmlReader.qpp  QC_XmlRpcClient.cpp  QC_XmlRpcClient.h  QC_XmlRpcClient.qpp  QoreXPath.h  QoreXmlDoc.h  QoreXmlReader.cpp  QoreXmlReader.h  QoreXmlRpcReader.cpp  QoreXmlRpcReader.h  qc_option.qpp  ql_xml.cpp  ql_xml.h  ql_xml.qpp  qore-xml-module.h  single-compilation-unit.cpp  xml-module.cpp
test/: GlobalWeather.qtest  InputStreamSaxIterator.qtest  Salesforce.com.qtest  SoapClient.qtest  SoapHandler.qtest  XmlRpcClient.qtest  enterprise.wsdl  multi-soap.wsdl  simple.wsdl  soap.qtest  soaputil.qtest  test.wsdl  test1.wsdl  xml-module-test-soapui-project.xml  xml-test.q  xml.qtest
